<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ess.eSSAndroidBaseLibrary.util.uIUtilities.NoInternetWaitingActivity">

    <com.ess.slbg.util.uIUtilities.GifImageView
        android:id="@+id/no_internet_waiting_imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:src="@drawable/loading_icon"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/no_internet_waiting_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/no_internet_waiting_imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:gravity="center"
        android:textSize="22sp"
        android:text="@string/no_internet_title_no_internet_text"/>

    <TextView
        android:id="@+id/no_internet_waiting_description_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:text="@string/no_internet_descriptione_no_internet_text"
        android:layout_below="@+id/no_internet_waiting_textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/no_internet_waiting_bottom_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:gravity="center"
        android:text="@string/app_description_text"/>

</RelativeLayout>
